# get-es-index-sizes

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: test.ipynb
src/get_es_index_sizes/: __init__.py  __version__.py  main.py
src/get_es_index_sizes/config/: env.py
tests/: test_my_app.py
